ingress/fixtures/output/ingress_with_headers_annotations_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`custom-headers`) && PathPrefix(`/customheaders`)
    middlewares:
    - name: headers-4656452034294353894
      namespace: testing
    priority: 0
    services:
    - name: service1
      port: 80
