ingress/fixtures/output/ingress_with_matcher_modifier_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: test
  namespace: testing
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/bar`)
    middlewares:
    - name: traefik.tchouk/bar
      namespace: testing
    priority: 0
    services:
    - name: service1
      port: 80
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/foo`)
    middlewares:
    - name: traefik.tchouk/foo
      namespace: testing
    priority: 0
    services:
    - name: service1
      port: 80
